# aetherforge

./: -  .gitignore  AGENTS.md  AetherForge.spec  README.md  _gen.py  _write_components.py  build.bat  install.bat  launcher.bat  pom.xml  pyproject.toml  run_tests.bat  run_viewer.bat  run_web.py  security_best_practices_report.md  setup.py  start_desktop.bat  start_server.bat  start_ui.bat  start_web.bat
.github/workflows/: build.yml
AetherForgeStudio-WebView2/: MainForm.cs  Program.cs  app.manifest
AetherForgeStudio-WinUI/: AetherForgeStudio.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  app.manifest  launch.bat
AetherForgeStudio-WinUI/Controls/: AgentStatusCard.xaml  AgentStatusCard.xaml.cs  EvidencePanel.xaml  EvidencePanel.xaml.cs  TransactionBar.xaml  TransactionBar.xaml.cs
AetherForgeStudio-WinUI/Models/: AgentState.cs  TaskInfo.cs  TokenUsage.cs  VerificationReport.cs  WorldSnapshot.cs
AetherForgeStudio-WinUI/Pages/: AgentWorkspacePage.xaml  AgentWorkspacePage.xaml.cs  AssetsPage.xaml  AssetsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  EntitiesPage.xaml  EntitiesPage.xaml.cs  QuestsPage.xaml  QuestsPage.xaml.cs  RulesPage.xaml  (+5 more)
aetherforge/: AGENTS.md  README.md  __init__.py  autonomous.py  cli.py  config.py  main.py  mcp_server.py  pom.xml  requirements-audiocraft.txt  requirements.txt  start_ui.bat
docs/: agent-runtime-baseline.md  architecture.md
test/: test_e2e_failures.py  test_evidence.py  test_gateway.py  test_mcp_agent_tools.py  test_new_tools.py  test_security.py
(+156 files in other folders)
